multiple content changes

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -34,18 +34,22 @@
 
 	  <hr class="short-thick-rule">
           
-	  <a class="header-link" href="http://cs210.stanford.edu/about.html">Jay Borenstein</a>
-	  <p>Technology Developer & Advisor</p>
-(650) 723-8242<br>	  
-<p><a href="mailto:borenstein@cs.stanford.edu">borenstein@cs.stanford.edu</a></p>
+	 
+  <a class="header-link" href="/about_jgc/team_bios/denise.html">Denise Adams</a>
+	  <p>Finance Manager</p>
+(650) 723-1137<br>	  
+<p><a href="mailto:dflowers@stanford.edu">dflowers@stanford.edu</a></p>
           <br>
-
 	  <a class="header-link" href="/about_jgc/team_bios/manuelito.html">Manuelito Biag</a>
 	  <p>Social Science Research Associate</p>
 (650) 724-2810<br>	  
 <p><a href="mailto:mdbiag@stanford.edu">mdbiag@stanford.edu</a></p>
           <br>
-
+ <a class="header-link" href="http://cs210.stanford.edu/about.html">Jay Borenstein</a>
+	  <p>Technology Developer & Advisor</p>
+(650) 723-8242<br>	  
+<p><a href="mailto:borenstein@cs.stanford.edu">borenstein@cs.stanford.edu</a></p>
+          <br>
 	  <a class="header-link" href="/about_jgc/team_bios/graciela.html">Graciela Borsato</a>
 	  <p>Social Science Research Associate</p>
 (650) 724-4673<br>	  
@@ -123,7 +127,11 @@
 <p><a href="mailto:monikas1@stanford.edu">monikas1@stanford.edu</a></p>
           <br>
 
-	  
+	   <a class="header-link" href="/about_jgc/team_bios/laurel.html">Laurel Sipes</a>
+	  <p>Policy Analyst</p>
+(650) 726-1529<br>	  
+<p><a href="mailto:mdbiag@stanford.edu">lsipes@stanford.edu</a></p>
+<br> 
           <a class="header-link" href="/about_jgc/team_bios/karen.html">Karen Strobel</a>
 	  <p>Senior Research Associate</p>
 	  <p><a href="mailto:strobe@stanford.edu">strobe@stanford.edu</a></p>
