--- a/about_jgc/team_bios/content-carmen.html
+++ b/about_jgc/team_bios/content-carmen.html
@@ -8,7 +8,7 @@
 <br>
 <p>
 <img class="bio-std" src="/images/team/team_pics_resized/Carmen_resized.jpg">
-Carmen joined JGC as an Administrative Associate, providing general administrative support to the center's staff. Prior to joining JGC, Carmen worked for an East Palo Alto Community Clinic where she had full responsibility in handling the company's payroll. She also had the experience of working as a Bilingual Teacher Assistant for two Bay Area School Districts where she continues volunteering as an interpreter during parent/teacher conferences for the Spanish speaking families. She holds a degree in Public Accounting from the University of Michoacán, Mexico.
+Carmen joined the Gardner Center as an Administrative Associate, providing general administrative support to the center's staff. Prior to joining the Gardner Center, Carmen worked for an East Palo Alto Community Clinic where she had full responsibility in handling the company's payroll. She also had the experience of working as a Bilingual Teacher Assistant for two Bay Area School Districts where she continues volunteering as an interpreter during parent/teacher conferences for the Spanish speaking families. She holds a degree in Public Accounting from the University of Michoacán, Mexico.
 </p>
          </div>
 
