--- a/about_jgc/team_bios/content-mary.html
+++ b/about_jgc/team_bios/content-mary.html
@@ -9,7 +9,7 @@
 <p>
 <img class="bio-std" src="/images/team/Mary.jpg">
 Mary Hofstedt is a Youth Development Program and Policy
-Specialist at JGC. Mary directed the Youth Engaged in
+Specialist at the Gardner Center. Mary directed the Youth Engaged in
 Leadership and Learning (YELL) program in Redwood City
 from 2003 to 2006, and has trained program staff,
 mentors, and Stanford undergraduate and graduate
@@ -17,7 +17,7 @@ students in Youth Development theory and practice. She also provides facilitatio
 and youth development consultation for Bay Area organizations. Mary holds a
 masters degree from the Stanford University School of Education, and has a
 background in education ranging from non-profit management and fund raising
-to teaching and curriculum design. Prior to her work with JGC, Mary spent six
+to teaching and curriculum design. Prior to her work with the Gardner Center, Mary spent six
 years as the Education and Development Director of The Earth’s Birthday Project,
 an environmental education not for profit in Santa Fe, New Mexico.
  </p>
