fixed denise and laurel photo links

--- a/about_jgc/team_bios/content-denise.html
+++ b/about_jgc/team_bios/content-denise.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Finance Manager</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/denise.jpg">
+<img class="bio-std" src="/images/team/Denise.jpg">
 
 <p>Denise Adams joined the staff of the John W. Gardner Center as Finance Manager in December 2012 where she oversees grants, gifts, and operating funds. She also contributes her expertise in research administration in preparing budgets, managing grant and contract proposals, and ensuring compliance with Stanford, federal, and sponsor policies. Denise holds a BS degree in Information Systems Management from the University of San Francisco.</p>
 <br>
