--- a/our_work/content-ece.html
+++ b/our_work/content-ece.html
@@ -18,7 +18,9 @@
 <br>
 
 <h1 class="content-text-header">Publications</h1>
-
+<ul>
+<li><a href="/resources/publications/GardnerCenter_RB_ECELinkages_2013.pdf">Improving the Quality and Continuity of Practice Across Early Childhood Education and Elementary Community School Settings - January 2013</a></li>
+</ul>
 <ul>
 <li><a href="/resources/reports/ECE_Linkages_Implementation_Study.pdf">Early Childhood and Community Schools Linkages Project: Implementation Study - October 2012</a></li>
 </ul>
