--- a/our_work/content-yda.html
+++ b/our_work/content-yda.html
@@ -94,7 +94,20 @@ decreased duplication, and identification of gaps in services; </li>
 <li> Create high-quality research and contribute to the larger field. </li>
 
 </ul>
-
+<br>
+<!--photolarge for  302px width and larger-->
+<!--photosmall for  200px to 302px width-->
+<div class="photosmall">
+  <div class="photosmall">
+    <span class="citation">
+      
+    </span>
+    <!-- change the "#" below to the URL you want a user to go if they click the image-->
+    <a href="http://www.hepg.org/hep/book/186/FromDataToAction" class="lightbox" titles="From Data to Action">
+      <img class="photosmall" src="/images/fromdatatoaction.jpg" alt="From Data to Action">
+    </a>
+  </div>
+</div>
 <br>
 
 <h1 class="content-text-header">Broadening our Understanding of Community Youth Development</h1>
