fixed haywire bullet, added left hand boxes

--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -7,11 +7,11 @@
  <br>
 
 
-    <aside>
-    <div class="right-side-box">
+<aside>
+ <div class="right-side-box">
   <h1 class="content-text-header">Partner Organizations</h1>
 
-   <ul>
+ <ul>
 <li>Annenberg Institute for School Reform </li>
 <li>Dallas Independent School District</li>
 <li>New Visions for Public Schools - New York</li>
@@ -23,8 +23,6 @@
 <h1 class="content-text-header">Tools</h1>
 <ul>
 <li><a href="http://permalink.fliqz.com/aspx/permalink.aspx?at=ecfdd4a7c70e496681c12ca6bd890d65&a=7c89bf5398ac4c49a016c936e4542736">Webinar about College Readiness Indicator Systems for Wallace Out-of-School Time Grantees</a></li>
-</ul>
-<br>
 <li><a href="/our_work/cris/CRIS Toolkit - Interim Product - Nov 2011.pdf">College Readiness Indicator Systems Toolkit (Interim Product)</a></li>
 </ul>
 <br>
@@ -33,11 +31,38 @@
 <li><a href="/our_work/cris/VUE35.pdf">Voices in Urban Education 35: College Readiness Indicator Systems: Building Effective Supports for Students</a></li>
 </ul>
     </div> <!--end right side box div-->
-    </aside>
+</aside>
 
 
 
 <p>Education leaders across the country are confounded by a growing phenomenon:  too many students are not college ready when they leave high school.  Although indicators exist to identify students at-risk of dropping out of high school, few indicators of students’ college readiness are currently in place, and few districts have linked indicators to practices and policies in ways that would enable action to create meaningful, lasting change. </p>
+
+
+<aside>
+ <div class="left-side-box">
+  <h1 class="content-text-header">Partner Organizations</h1>
+
+ <ul>
+<li>Annenberg Institute for School Reform </li>
+<li>Dallas Independent School District</li>
+<li>New Visions for Public Schools - New York</li>
+<li>Pittsburgh Public Schools</li>
+<li>San Jose Unified School District</li>
+<li>School District of Philadelphia</li>
+</ul>
+<br>
+<h1 class="content-text-header">Tools</h1>
+<ul>
+<li><a href="http://permalink.fliqz.com/aspx/permalink.aspx?at=ecfdd4a7c70e496681c12ca6bd890d65&a=7c89bf5398ac4c49a016c936e4542736">Webinar about College Readiness Indicator Systems for Wallace Out-of-School Time Grantees</a></li>
+<li><a href="/our_work/cris/CRIS Toolkit - Interim Product - Nov 2011.pdf">College Readiness Indicator Systems Toolkit (Interim Product)</a></li>
+</ul>
+<br>
+<h1 class="content-text-header">Publications</h1>
+<ul>
+<li><a href="/our_work/cris/VUE35.pdf">Voices in Urban Education 35: College Readiness Indicator Systems: Building Effective Supports for Students</a></li>
+</ul>
+    </div> <!--end right side box div-->
+</aside>
 
  
 <br>
