Mulitple content changes week of march 18

--- a/about_jgc/content-welcome.html
+++ b/about_jgc/content-welcome.html
@@ -8,7 +8,7 @@
 <br>
 <span class="content-bold">Executive Director's Message</span><br>
 <br>
-<img class="bio-std" src="/images/team/AmyUseforWeb.jpg">
+<img class="bio-std" src="/images/team/Gerstein.jpg">
 <i>“We are continually faced with a series of great opportunities brilliantly disguised as insoluble problems” – John W. Gardner</i>
 <br>
 <br>
