--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -37,14 +37,28 @@
 			<li><a href="foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
 		</ul><br>
 	  <hr class="short-rule">
-
-	  <h1 class="content-text-header">F - N</h1><br>
-	  <hr class="short-rule">
-    
-
-           <h1 class="content-text-header">O</h1>
+	   
+	  <h1 class="content-text-header">F</h1><br>
+          <hr class="short-rule">
+	  
+<h1 class="content-text-header">G</h1>
 		<ul style="list-style: none;">
-			<li><a href="okf.html">Oakland PASS 2 Program Evaluation</a></li>
+    <li><a href="gardengrove.html">Garden Grove Unified School District</a></li><br>
+
+<h1 class="content-text-header">H - L</h1><br>
+	  <hr class="short-rule">
+
+<h1 class="content-text-header">M</h1>
+		<ul style="list-style: none;">
+    <li><a href="missionpromise.html">Mission Promise Neighborhood</a></li><br>
+
+<h1 class="content-text-header">N</h1>
+		<ul style="list-style: none;">
+    <li><a href="wallace.html">Next Generation After School System Building Initiative</a></li>
+
+<h1 class="content-text-header">O</h1>
+    <ul style="list-style: none;">
+<li><a href="okf.html">Oakland PASS 2 Program Evaluation</a></li>
 		</ul><br>
 <hr class="short-rule">
 
