--- a/about_jgc/team_bios/content-monika.html
+++ b/about_jgc/team_bios/content-monika.html
@@ -8,7 +8,11 @@
 	   <br>
 	  <p>
           <img class="bio-std" src="/images/team/Monika.jpg">
-          Monika Sanchez is a Policy Analyst for the Youth Data Archive initiative at the John W. Gardner Center. Prior to joining the Gardner Center, Monika was a Research Analyst at the metropolitan planning organization, SANDAG, where she provided research and analytical support for the agency's economic services arm, including fiscal and economic impact assessments, demographic data and industry cluster analysis, and community housing plans and programs evaluation. She has extensive experience working with data for public policy and planning purposes, as well as expertise coordinating efforts involving government agencies, community partners, and the public. Monika received an M.Sc. in Population Studies and Development from the London School of Economics and Political Science and a B.A. in Economics from the University of California, San Diego. 
+<p>Monika is a Policy Analyst for the Gardner Center’s Youth Data Archive initiative. She has worked extensively in the areas of student attendance, early childhood, and student health and wellness. This work includes a study of the causes and consequences of chronic absenteeism at the individual, setting, and system levels, as well as analyses of early elementary outcomes of students in San Mateo County’s Preschool For All program.  Monika is currently part of the Gardner Center’s team providing research and evaluation expertise to the Promise Neighborhood initiative in San Francisco’s Mission District.</p>
+<br>
+<p>Prior to joining the Gardner Center, Monika was a Research Analyst at the southern California metropolitan planning organization, SANDAG, where she provided research and analytical support for the agency's economic services arm, including economic impact assessments, demographic data and industry cluster analysis, and community housing plans and programs evaluation. She has extensive experience coordinating efforts involving government agencies, community partners, and the public.</p> 
+<br>
+<p>Monika holds an M.Sc. in Population Studies and Development from the London School of Economics and Political Science and a B.A. in Economics from the University of California, San Diego.
           </p>
 
          </div>
