fixed formatting issue on projects by name page

--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -43,18 +43,21 @@
 	  
 <h1 class="content-text-header">G</h1>
 		<ul style="list-style: none;">
-    <li><a href="gardengrove.html">Garden Grove Unified School District</a></li><br>
+    <li><a href="gardengrove.html">Garden Grove Unified School District</a></li>
+   </ul> <br>
 
 <h1 class="content-text-header">H - L</h1><br>
 	  <hr class="short-rule">
 
 <h1 class="content-text-header">M</h1>
 		<ul style="list-style: none;">
-    <li><a href="missionpromise.html">Mission Promise Neighborhood</a></li><br>
+    <li><a href="missionpromise.html">Mission Promise Neighborhood</a></li>
+    </ul><br>
 
 <h1 class="content-text-header">N</h1>
 		<ul style="list-style: none;">
     <li><a href="wallace.html">Next Generation After School System Building Initiative</a></li>
+    </ul><br>
 
 <h1 class="content-text-header">O</h1>
     <ul style="list-style: none;">
