Menu and content changes

--- a/about_jgc/content-directions.html
+++ b/about_jgc/content-directions.html
@@ -8,77 +8,45 @@
 
 <a href="#By Car">By Car</a> or <a href="#By Train">By Train</a><br>  
 <br>
-<h1 class="content-page-header">John W. Gardner Center for Youth and Their Communities (JGC)</h1>
+<h1 class="content-page-header">John W. Gardner Center for Youth and Their Communities</h1>
 Stanford University School of Education<br>
-Barnum Center<br>
-505 Lasuen Mall<br>
-Stanford, CA 94305-3083<br>
+Littlefield Center<br>
+365 Lasuen Mall, 3rd Floor<br>
+Stanford, CA 94305-2068<br>
 <br>
-The John W. Gardner Center is located in the Barnum Center, near the Stanford Bookstore and the School of Education.<br>
+
+
+<p>The John W. Gardner Center is located in the Littlefield Center. Use the West Lobby doors to access the elevator to the Gardner Center’s offices on the third floor.</p>
 <br>
-<!--
-<img class="pin" src="/images/icons/gmarker-green.jpg">Barnum Center
-<img class="pin" src="/images/icons/gmarker-light-blue.jpg">Tressider
-<img class="pin" src="/images/icons/gmarker-yellow.jpg">Parking Structure 6
--->
+<p>The closest visitor parking is available on Lasuen Street, on Memorial Way, and on the Campus Oval. Parking is enforced Monday-Friday, 8:00 a.m. to 4:00 p.m.</p>
 <br>
-<p>
-<iframe width="625" height="550" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;source=embed&amp;hl=en&amp;ecpose=37.42310001,-122.16521818,141.43,-38.796,71.43,0&amp;msa=0&amp;msid=200448085129146576286.00048d6dea60ec24a6ab9&amp;t=m&amp;vpsrc=6&amp;ll=37.424298,-122.167196&amp;spn=0.005964,0.00912&amp;z=16&amp;output=embed"></iframe><br /><small>View <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;source=embed&amp;hl=en&amp;ecpose=37.42310001,-122.16521818,141.43,-38.796,71.43,0&amp;msa=0&amp;msid=200448085129146576286.00048d6dea60ec24a6ab9&amp;t=m&amp;vpsrc=6&amp;ll=37.424298,-122.167196&amp;spn=0.005964,0.00912&amp;z=16" style="color:#0000FF;text-align:left">Stanford School of Education Buildings and Parking</a> in a larger map</small>
-</p>
+<p>All locations can be found at F-9 on the <a class="link-underlined" href="http://transportation.stanford.edu/pdf/parking-map.pdf">campus map.</a></p>
+
 <br>
-<hr rule>
 <a name="By Car"></a> <h1 class="content-text-header">BY CAR</h1><br>
 
 <h1 class="content-text-header">Driving to the Stanford campus</h1>
 <br>
 <ul>
-<li><span class="content-underline">Parking Option 1:</span> The closest visitor parking is in the Tresidder Union lot, #L-39 (699 Lagunita Drive, Stanford, CA).</li>
-<li><span class="content-underline">Parking Option 2:</span> Alternate parking is available in Parking Structure #6 (560 Wilbur Way, Stanford, CA).</li>
 </ul>
 <br>
 <h1 class="content-bold">Google Directions</h1><br><script src="//www.gmodules.com/ig/ifr?url=http://hosting.gmodules.com/ig/gadgets/file/114281111391296844949/driving-directions.xml&amp;up_fromLocation=&amp;up_myLocations=699%20Lagunita%20Drive%2C%20Stanford%2C%20CA%20%7C%20560%20Wilbur%20Way%2C%20Stanford%2C%20CA&amp;up_defaultDirectionsType=&amp;up_autoExpand=&amp;synd=open&amp;w=320&amp;h=55&amp;brand=light&amp;lang=en&amp;country=US&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
 <br>
 
-<span class="content-underline">Parking Option 1: Tresidder Union lot, #L-39 (699 Lagunita Drive, Stanford, CA)</span><br>
-
-<p>Metered and "Pay and Display" parking are available at the Tresidder Union parking lot for a cost of $1.50 per hour.  Parking meters require quarters and have a two-hour limit.  "Pay and Display" machines accept Visa or MasterCard, cash, or coins, but do not issue change.  Please be sure to place the "Pay and Display" receipt on your dashboard.  Parking is FREE after 4:00 pm and during weekends.</p>  
-<br>
-
-<ul>
-<span class="content-italic">Walking from Tresidder Union parking lot to Barnum Center</span>
-<ol>
-<li>Head north toward the center of campus with Tresidder Union on your left and Dinkelspiel Auditorium on your right.</li>
-<li>Continue north on Lasuen Mall with the Old Union on your left and the Bookstore on your right.</li>
-<li>Barnum Center is on your right before reaching the Clock Tower at 505 Lasuen Mall.</li>
-</ol>
-</ul>
-<br>
-
-<span class="content-underline">Parking Option 2: Parking Structure #6 (560 Wilbur Way, Stanford, CA)</span><br>
-<p>"Pay By Space Number" parking is available in Parking Structure #6 for a cost of $1.50 per hour. Park in a "Visitor Pay Parking" numbered spot (1-41 and 51-73). The "Pay By Space Number" machines accept Visa or MasterCard, cash, or coins, but do not issue change. You do not need to display your receipt. Parking is FREE after 4:00 pm and during weekends.</p><br>
-
-<ul>
-<span class="content-italic">Walking from Parking Structure #6 to Barnum Center</span> <br>
-<ol>
-<li>Exit the parking structure and turn left on Bowdoin Lane.</li>
-<li>Cross Galvez Street and continue between the Law School (on your left) and CERAS (on your right).</li>  
-<li>	Head diagonally across Canfield Court toward the Clock Tower, keeping the Bookstore to your left.</li>
-<li>Enter through the back entrance of Barnum Center and walk through the building to JGC.</li>
-</ol>
-</ul>
 
 <hr rule>
 <a name="By Train"></a> <h1 class="content-text-header">BY TRAIN</h1><br>
-<h1 class="content-text-header">Taking <a class="header-link" href="www.caltrain.com">Caltrain</a> to Stanford</h1>
+<h1 class="content-text-header">Taking <a class="header-link" href="www.caltrain.com">Caltrain</a> to Stanford</h1><br>
 From the Palo Alto Caltrain stop, free <a class="link-underlined" href="http://transportation.stanford.edu/marguerite/">Marguerite</a> shuttles will take you to campus.  Take the <a class="link-underlined" href="http://transportation.stanford.edu/marguerite/p/">Palm Drive shuttle (Line P)</a> and get off at the Oval.<br>
  <br>
 <span class="content-italic">Walking to Barnum Center from the Oval</span><br>
 <ul>
 <li>Face the Main Quad.
 <li>	Turn left and walk down Serra Mall.</li>
-<li>	Turn right on Lasuen Mall and walk the length of the Main Quad.</li>
-<li>	Pass the School of Education (Cubberley) and the Clock Tower on your left.</li>
-<li>	Barnum Center is on your left at 505 Lasuen Mall.</li>
+<li>	Turn left on Lasuen Mall.</li>
+<li>	The Littlefield Center will be directly ahead.</li>
+<li>	Use the West Lobby doors to the left of the archway to access the elevator to the Gardner Center's office on the third floor.</li>
+
 </ul>
 
          </div>
