--- a/about_jgc/content-mission.html
+++ b/about_jgc/content-mission.html
@@ -4,17 +4,48 @@
 
         <div class="jgc-content-feature-item-left">
 	
-	   <h1 class="title-page-header-big">Mission and Principles</h1>
+	   <h1 class="title-page-header-big">Creating Knowledge. Igniting Change.</h1>
 	   <br>
 
-           <h1 class="content-text-header">Mission</h1>
-		<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University partners with 			communities to develop leadership, conduct research and effect change to improve the lives of youth.</p>
-		<br>
-	
-   	   <h1 class="content-text-header">Principles</h1>
-		<p>Our work is rooted in the principles of community youth development: a community only prospers when its young people 		prosper, and young people only flourish in a flourishing community.    Specifically, the Center believes in working in deep partnership with communities; bridging the gap between research, practice and policy; generating actionable research; providing opportunities for undergraduate and graduate students to contribute to research projects; and ultimately seeking to inform both the community at hand and the broader field about critical findings from our work.</p>
-		<br>
-
+<p>The John W. Gardner Center for Youth and Their Communities at the Stanford Graduate School of Education partners with communities to develop leadership, conduct research, and effect change to improve the lives of youth. Named for the prolific thinker, innovator, and activist John W. Gardner, the Gardner Center was founded in 2000 by Milbrey McLaughlin, the David Jacks Professor of Education and Public Policy. Our guiding philosophy distinguishes us from other research organizations in that we:</p>
+<br>
+<ul>
+<li>focus on all aspects of a youth’s development: cognitive, social, emotional, and physical.</li> 
+<li>work in deep partnership with communities, responding to questions posed by partners.</li> 
+<li>bridge the gap between research, practice, and policy.</li>
+<li>generate actionable knowledge through regular and iterative exchanges.</li>
+<li>seek to inform a study’s stakeholders as well as the broader field about our work.</li>
+</ul>
+<br>
+<p>In our research, we use a comprehensive tri-level framework, focusing on the interactions among the embedded individual (youth/student), setting (school, classroom, program) and system (district, public agency, community) levels, and the ways that changes at one level directly connect to the other levels. Our work with partners routinely involves capacity building to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth. The Gardner Center builds additional capacity of partner organizations through ongoing projects that:</p> 
+<br>
+<ul>
+<li>use data to drive action.</li>
+<li>inquire deeply into “what works for youth” in and across settings and systems.</li> 
+<li>embed youth development as a local approach to create thriving environments for youth.</li>
+<li>facilitate the creation of shared frameworks to guide planning and decision-making.</li>
+</ul>
+<br>
+<p>The Gardner Center’s collaborative approach is supported by three broad research strategies:</p>
+<br>
+<ul>
+<li>the cross-sector Youth Data Archive, linking data across schools, public agencies and community-based organizations to answer questions that no one agency or sector could answer alone.</li>
+<li>implementation and evaluation research, studying how youth development programs or systems supporting youth are implemented in specific contexts.</li>
+<li>community engagement and policy research, supporting organizations with a shared  focus on youth development to create knowledge and action.</li>
+</ul>
+<br>
+<p>We focus these strategies on the targeted policy areas of college and career readiness, early childhood education, youth health and wellness, and youth development practices across community settings. Our partners include K-12 and community schools, community colleges, community-based organizations and health care providers, among others. Our work is shared extensively, informing leaders who make policy decisions on the ground in communities throughout the country, and supporting practitioners with tools for school and community leaders to use in fostering youth participation.</p> 
+<br>
+<p>From our earliest days, the Gardner Center’s commitment to Stanford’s neighboring communities has supported local school districts, youth-serving public agencies and community based organizations to expand their potential by working cooperatively and collaboratively toward common goals. In this sense, we work with our near-neighbor partners to change the leadership paradigm from individually effective leaders to those who "can work in networks of responsibility," as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts.</p>
+<br>
+<p>We work to strengthen youth leadership and civic engagement through facilitation of initiatives and trainings that include:</p>
+<br>
+<ul>
+<li>Cross-sector planning and community development.</li> 
+<li>Youth-led research and youth leadership development.</li> 
+<li>Youth–adult partnerships to meet community-identified goals or outcomes.</li>
+<li>Stanford student support and training.</li> 
+</ul>
         </div>
 
       </div>
