--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -20,20 +20,20 @@
     <div id="sub_menu">
       <ul class="sf-menu">
         <li class="current">
-          <a href="#">About JGC</a>
+          <a href="#">About Us</a>
           <ul>
             <li>
               <a href="/about_jgc/welcome.html">Welcome</a>
             </li>
+            <li class="current">
+              <a href="/about_jgc/team.html">Who We Are</a>
+            </li>
             <li>
-              <a href="/about_jgc/mission.html">Mission & Principles</a>
+              <a href="/about_jgc/mission.html">What We Do</a>
             </li>
             <li>
               <a href="/about_jgc/jwg.html">John W. Gardner</a>
             </li> 
-            <li class="current">
-              <a href="/about_jgc/team.html">Our Team</a>
-            </li>
             <li class="current">
               <a href="/about_jgc/stanford.html">At Stanford</a>
             </li>
