added new header, modified css and header to fit new image size

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -10,10 +10,8 @@
   <div id="container">
     <header>
     	<div id="navbar">
-    	  <!---<a href="/"><img src="/images/2012FebTopLogoTrans3.png" /></a>--->
-    	  <a href="/"><img src="/images/jgclogo.gif" /></a>
-
-          
+    	  <!--<a href="/"><img src="/images/jgclogo.gif" /></a>-->
+    	  <a href="/"><img src="/images/banner-03-29-13a.jpg" /></a>
         </div>
     </header>
 
