content changes and additional issue briefs

--- a/about_jgc/content-contact.html
+++ b/about_jgc/content-contact.html
@@ -54,7 +54,7 @@
 		<h1 class="title-page-header-big"> Contact Us </h1><br>
           	<h1 class="content-text-header">John W. Gardner Center for Youth and Their Communities (JGC)</h1>
 		Stanford University School of Education<br>
-		505 Lasuen Mall<br>
+                365 Lasuen Street, Stanford, Stanford, CA		
 		Stanford, CA 94305-3083<br>
 		<span class="content-bold">e-mail:</span> <a href="mailto:gardnercenter@lists.stanford.edu">gardnercenter@lists.stanford.edu</a><br>
 		<span class="content-bold">Phone:</span> (650) 723-3099 <br>
