--- a/our_work/content-community_schools_qual_eval.html
+++ b/our_work/content-community_schools_qual_eval.html
@@ -17,9 +17,15 @@
     <ul>
 <li>Redwood City School District</li>
 </ul>
+<br>
+<h1 class="content-text-header">Publications</h1>
+<ul>
+<li>A Study of Family Engagement in Redwood City Community Schools(<a href="/resources/reports/FamilyEngagementIssueBrief2013" class="link-no-underline">Issue Brief)</a></li>
 
+</ul>   
     </div> <!--end right side box div-->
     </aside>
+   
 
 <span class="content-bold">Overview</span>
 <p>Since 2008, the John W. Gardner Center (JGC) at Stanford University, in partnership with Redwood City School District (RCSD) and Redwood City 2020 (RC2020), has been conducting a quantitative study to understand the benefits of student participation in community school programming.  Recently, JGC analyses of school district data have highlighted the importance of family engagement.  Our research has shown that students whose parents participate in community school programming are more likely to show achievement gains. At the request of RCSD and RC2020, JGC will conduct a companion study during the 2011-2012 school year using qualitative data to deepen our understanding of family engagement within and across four Redwood City community schools.</p>
