--- a/our_work/content-healthyschools.html
+++ b/our_work/content-healthyschools.html
@@ -27,26 +27,30 @@
     </aside>
 
 
-<span class="content-bold">Overview</span>
-
 <p>
 
 <p>
+In a constrained fiscal climate, many California schools have cut or reduced funding for health and wellness programming for students. In August 2010, the Sequoia Healthcare District (SHD) launched the Healthy Schools Initiative to support four local school districts with funding for staff and programs aimed at improving the physical and emotional health of students and families.
 <br>
-The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University, in partnership with the Sequoia Healthcare District (SHD) and four local school districts, is conducting a three-year study of the Healthy Schools Initiative (HSI). HSI seeks to improve student outcomes over the long term through increased coordination and access to health and wellness programming within districts and schools. During the first year of the study, JGC worked with SHD to develop a logic model and conducted a needs assessment, mapping health and wellness programs in the four partner districts. Years two and three of the study focus on investigating the ways in which HSI implementation affects the coordination of health and wellness programs in schools and districts and how this, in turn, influences awareness and accessibility of programs and activities. This study is a critical precursor to any future research on the ways that HSI influences individual student health outcomes.
-<br>
-<br>
-<span class="content-bold">Qualitative Implementation Study of the Healthy Schools Initiative</span>
-<br>
-<br>
-This study examines how the Healthy Schools Initiative affects the coordination and accessibility of health and wellness programming in schools from multiple perspectives. By engaging parents, students, and school and district staff, JGC researchers investigated the following research question:
+<br> 
+Reaching approximately 28,000 students per year, the Healthy Schools Initiative is based on the Centers for Disease Control’s Coordinated School Health (CSH) model. The CSH model emphasizes coordination of eight core wellness components: health education, physical education and activity, health services, nutrition services, counseling and social services, a healthy school environment, health promotion for staff, and family and community involvement. 
 <br>
 <br>
-    In what ways does the Healthy Schools Initiative affect the coordination and accessibility of health and wellness programs and activities at HSI schools?
+SHD is partnering with the Gardner Center to conduct a three-year implementation study of the Healthy Schools Initiative, examining coordination, awareness, and accessibility of these components across a sample of partner schools in the four districts. This study is a critical precursor to any future research on the ways that the initiative influences individual student outcomes.
 <br>
 <br>
-Through nearly 100 interviews and focus groups in the four partner school districts, our analyses revealed that effective and purposeful coordination of health and wellness activities was associated with increased integration of health and wellness programs within and across schools and districts, reaching more students equitably and leveraging resources.  For more information on this and other findings from this report, click on the document links to the right.
-<p>
+During the first year of the study, the Gardner Center worked with SHD to develop a logic model and conducted a needs assessment, mapping health and wellness programs and activities in the four school districts. Year two data collection included nearly 100 structured interviews and focus groups with district and school staff, students, and parents. Researchers found that effective and purposeful coordination was associated with increased integration of health and wellness programs within and across schools and districts, reaching more students equitably and leveraging resources.  Other key findings included:
+<br>
+<ul>
+<br>
+<li>Nearly 100% of study participants valued health and wellness in schools.</li> 
+<li>Study participants who were familiar with HSI believed that the initiative positively influenced awareness of health and wellness in their schools.</li>
+<li>Where wellness coordinators became involved in health and wellness programs and activities, coordination was described as more strategic and intentional.</li> 
+<br>
+</ul>
+<p>Year three of the study focuses on dissemination of research findings to audiences including parents, teachers, school district staff, and the community at large.</p>
+<br>
+<p>Detailed findings and methodologies can be found in the research publications at right.</p>
 
          </div>
 
