--- a/our_work/content-motivation.html
+++ b/our_work/content-motivation.html
@@ -26,14 +26,29 @@
     
     </div> <!--end right side box div-->
     </aside>
+<p>Academic motivation—the desire to learn and the belief that school is important—has long been regarded as critical to student achievement but only recently has moved to the forefront of education policy and practice.  Currently discussed within the framework of “non-cognitive factors,” academic motivation is a well-researched predictor of tenacity and perseverance, which in turn are crucial to meet the deep learning goals underlying the Common Core State Standards.
+<br>
+<br> 
+Given the importance of motivation and perseverance for student success, what are classroom practices that support students in developing positive beliefs and attitudes toward learning and school? This is the question the John W. Gardner Center has been exploring in partnership with the Redwood City School District (RCSD) since 2009. In particular, our research focuses on middle school students’ classroom experiences in relation to their academic motivation, engagement, and achievement.  Over the past four years, we have collected survey data from all middle school students in the district. This survey asks students about their classroom settings and about their motivation to learn, with a focus on self-efficacy (the extent to which students see themselves as capable learners) and learning goal orientation (whether they are more driven by grades or by a desire to learn). Students’ survey responses are then linked to their school records through the Youth Data Archive.
+<br>
+<br> 
+Findings from our analyses are shared with administrators and practitioners in the school district through presentations, conversations and publications. Through our conversations with teachers, principals and administrators we are able to refine and refocus our questions to ensure that our analyses continue to be relevant and meaningful to our community partners. To date, the research has helped us document Redwood City students’ motivational beliefs as critical precursors to their academic achievement, and that past achievement is not destiny: strategies to improve students’ motivation to learn will likely lead to improved academic performance. Additionally, the research highlights instructional practices that are associated with increases in students’ motivation and achievement during middle school; specifically, practices that:</p>
+<br>
+<ul>
+<li>focus on understanding rather than merely getting the right answer</li>
+<li>stress effort and improvement</li>
+<li>press students to embrace academic challenge</li> 
+<li>scaffold student learning</li>
+<li>convey emotional care</li>
+<li>encourage students to treat each other with respect</li>
+<li>express high teacher expectations</li>
+</u>
+<br>
 
 
-<p>Since 2009, the JGC has worked in partnership with the Redwood City School District to better understand middle school students’ classroom experiences. 
- In particular, this study focuses on students’ perceptions of classroom practices in relation to their motivational beliefs, engagement and achievement outcomes.  
-Over the past three years, JGC researchers have collected survey data from all middle school students in the Redwood City School District.  
-These surveys ask students about their perceptions of caring practices in the classroom as well as practices that encourage students to put forth effort and take on academic challenges.  In addition, surveys include questions about students’ own motivational beliefs and goals and the extent to which they are engaged in their learning. Students’ responses are linked to their school records and administrative data through the Youth Data Archive.  
-Findings from our analyses are shared with administrators and practitioners in the school district through presentations, conversations and publications.  
- Through our conversations with teachers, principals and administrators we are able to refine and refocus our questions to ensure that our analyses continue to be relevant and meaningful to our community partners.</p>
+
+
+
 
          </div>
 
