--- a/our_work/content-okf.html
+++ b/our_work/content-okf.html
@@ -18,7 +18,7 @@
 
 <h1 class="content-text-header">Publications</h1>
 <ul>
-
+<li>PASS-2: Putting Youth Contribution at the Center of Positive Youth Development in Oakland High School (<a href="/resources/publications/OKFPASS-2ResearchBrief2013" class="link-no-underline">Issue Brief)</a></li>
 <li>Oakland Kids First: Peers Advising Students to Succeed Implementation Study (<a href="/resources/reports/OKF_Report_12.12.pdf">Report</a>)</li>
     </div> <!--end right side box div-->
     </aside>
