--- a/our_work/content-pfa.html
+++ b/our_work/content-pfa.html
@@ -27,15 +27,16 @@
     </div> <!--end right side box div-->
     </aside>
 
-
-
-<p> At the request of partners in the Youth Data Archive (YDA), the John W. Gardner Center for Youth and Their Communities (JGC) have conducted two analyses examining academic outcomes for San Mateo County Preschool for All (PFA) participants who went on to attend elementary school in Redwood City School District (RCSD). The 2011 study found that students who attended PFA had lower report card proficiency rates than their non-PFA peers in kindergarten, first, and second grade. However, after adjusting for students’ demographic background characteristics, PFA participants’ report card proficiency rates were similar to – and sometimes higher than – non-participants'.  The study also found that children who attended two years of PFA had higher adjusted proficiency rates in many early elementary report card subjects compared to children who did not attend PFA.
+<p>With an aim of ensuring “access for all three and four year olds to high quality care and education that promotes success in school and life,” (San Mateo County Office of Education, n.d.) Preschool for All San Mateo County was established in 2004 as a five-year demonstration project aimed at reducing the achievement gap by supporting high-quality preschool programs for three- and four-year old children. Preschool for All San Mateo County (PFA) contracted with public school districts, non-profit agencies, and family-based child care providers to offer preschool services, setting quality standards and supporting partners in meeting these standards with funding for professional development, program assessment, and quality improvement. Many national studies have shown the value of preschool programs; San Mateo County wanted to know if PFA met the needs of the underserved students in its own community.
 <br>
 <br>
-The 2012 study strengthened this work by including more students in the analysis and by examining second graders’ outcomes on standardized tests.  The updated analysis supports the 2011 findings on student report card proficiency and finds similar patterns for second graders on standardized tests. </p>
+At the request of partners in the Youth Data Archive, the Gardner Center has conducted two analyses examining school-based outcomes for PFA participants who went on to attend elementary school in Redwood City School District. Using longitudinal data from the Youth Data Archive to link individual PFA student records to their elementary school records, Gardner Center researchers found that, after adjusting the data to control for differences in student characteristics, children who participated in Preschool for All matched or outperformed their peers in five report card subjects—math, listening/speaking, reading, writing and work study skills—as well as on standardized tests in math and English Language Arts. 
 <br>
-
-
+<br>
+Academic gains were greater for those who participated in the program for two years versus one year. The study found that children from the highest-risk groups particularly benefitted from the program. PFA students who later took part in the federal Free and Reduced Price Lunch program at their elementary school had higher adjusted proficiency rates than comparable non-participants in many of the five report card subjects from kindergarten through second grade. Additionally, children in nearly all of the highest-need groups—including Latino students, English language learners and participants in the Free and Reduced Price Lunch program—exhibited stronger work-study skills, particularly in kindergarten and first grade, than students from similar backgrounds who did not attend Preschool for All.
+<br>
+<br>
+Detailed findings and methodologies can be found in the research publications at right.</p>
 
          </div>
 
