final tweaks for week

--- a/our_work/content-motivation.html
+++ b/our_work/content-motivation.html
@@ -42,9 +42,9 @@ Findings from our analyses are shared with administrators and practitioners in t
 <li>convey emotional care</li>
 <li>encourage students to treat each other with respect</li>
 <li>express high teacher expectations</li>
-</u>
+</ul>
 <br>
-
+<p>Detailed findings and methodologies can be found in the research publications at right.</p>
 
 
 
