added content for healthy schools event

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,7 +7,7 @@
 
 <br>
 <br>
-<a class="link-underlined" href="http://recruit.trovix.com/jobhostmaster/jobhost/ViewJobPostDetails.do?title=SENIOR+COMMUNITY+ENGAGEMENT+ASSOCIATE&jobPostId=a337o42uvratdgdnqi5yorxe7e&accountId=de85ad313f8598db1c42b567a3df24a00497ba22&button=&action=viewDetails&tid=0207-fjaryeiw25gl5afdpew7ajuwng" target="_blank">Senior Community Engagement Associate</a>
+<a class="link-underlined" href="http://bit.ly/10Wo5f0" target="_blank">Project Coordinator</a>
 
 <br>
 <br>
