--- a/our_work/content-healthyschools.html
+++ b/our_work/content-healthyschools.html
@@ -20,7 +20,7 @@
 <br>
 <h1 class="content-text-header">Publications</h1>
 <ul>
-<li>Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts (<a href="/resources/reports/HealthySchoolsInitiativeReport12.12.pdf" class="link-no-underline">Report</a> & <a href="/resources/reports/HealthySchoolsInitiative_ExecutiveSummary12.12.pdf"class="link-no-underline">Executive Summary</a>)</li>
+<li>Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts (<a href="/resources/reports/HealthySchoolsInitiativeStudy42013.pdf" class="link-no-underline">Report</a> & <a href="/resources/reports/HealthySchoolsInitiative_ExecutiveSummary12.12.pdf"class="link-no-underline">Executive Summary</a>)</li>
 
 </ul>   
     </div> <!--end right side box div-->
