changes for week

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ document.createElement("article" );
 					<p>
 <ul class="news">
 
-  <li><a class="link-homepage-feature" href="news/news.html">May 20, 2013<br>
-Cultivating the Grassroots from the Top Down: Empowerment Talk in Action</a><br><br>
+  <li><a class="link-homepage-feature" href="news/news.html">June 29, 2013<br>
+Celebrate East Palo Alto! 30th Anniversary & Community Festival</a><br><br>
                               
 						
 
